Atualizado os testes e corrigido a logica de updateFlashCard